Fix word wrapping on email preview

--- a/app/styles/views/dashboard/_unused-advisor.scss
+++ b/app/styles/views/dashboard/_unused-advisor.scss
@@ -68,6 +68,7 @@
     pre {
       font-family: inherit;
       word-wrap: break-word;
+      white-space: pre-wrap;
     }
 
     .header {
